<resources>
    <string name="app_name">IST-Кафе-Повар</string>

    <string name="open" translatable="false">open</string>
    <string name="close" translatable="false">close</string>
    <string name="count">Дона</string>
    <string name="please_update_app">Илтимос, илованинг янги версиясини юклаб олинг!</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="cart">Сават</string>
    <string name="select">Танлаш</string>
    <string name="main">Асосий</string>
    <string name="favourites">Севимлилар</string>
    <string name="orders">Буюртмалар</string>
    <string name="profile">Профил</string>
    <string name="switch_store">Савдо дўконини ўзгартириш</string>
    <string name="switch_currency">Валютани ўзгартириш</string>
    <string name="news">Янгиликлар</string>
    <string name="switch_language">Тилни ўзгартириш</string>
    <string name="rate_app">Иловани баҳолаш</string>
    <string name="share_app">Иловани улашиш</string>
    <string name="logout">Tizimdan chiqish</string>
    <string name="color">Ранги:</string>
    <string name="add_2_cart">Саватга қўшиш</string>
    <string name="similar_products">Ўхшаш маҳсулотлар</string>
    <string name="search_product">Маҳсулот қидириш...</string>
    <string name="phone_number">Телефон рақам</string>
    <string name="fullname" translatable="false">Тўлиқ исми шариф</string>
    <string name="date_birth">Туғилган сана</string>
    <string name="gender">Жинси</string>
    <string name="male">Эркак</string>
    <string name="female">Аёл</string>
    <string name="save">Сақлаш</string>
    <string name="log_in">Тизимга кириш</string>
    <string name="login">Логин</string>
    <string name="parol">Парол</string>
    <string name="input">Кириш</string>
    <string name="did_you_registrated">Рўйҳатдан ўтганмисиз?</string>
    <string name="registration">Рўйҳатдан ўтиш</string>
    <string name="your_order_accept">Буюртмангиз қабул қилинди!</string>
    <string name="thank_you_use_us_service">Бизнинг ҳизматлардан фойдаланганингиз учун раҳмат.</string>
    <string name="back_to_main_page">Асосий ойнага қайтиш</string>
    <string name="amount_">Миқдори:</string>
    <string name="categories">Категориялар</string>
    <string name="top_products">Топ маҳсулотлар</string>
    <string name="select_store_">Савдо дўконини танланг:</string>
    <string name="you_order_changed_please_review">Буюртмангиздаги айрим маҳсулотларнинг миқдори бизнинг дўконда камлиги туфайли саватингиздаги маҳсулотлар миқдори камайтирилди. Илтимос текшириб чиқинг ва қайтадан буюртма тугмасини босинг.</string>
    <string name="max_count_selected">Максимал миқдор танланган.</string>
    <string name="please_change_product_amount">Илтомос маҳсулот миқдорини ўзгартиринг.</string>
    <string name="add_product_to_cart">Маҳсулот саватга қўшилди.</string>
    <string name="cart_refreshed">Сават янгиланди.</string>
    <string name="datas_refreshed">Маълумотлар янгиланди.</string>
    <string name="price_">Нархи:</string>
    <string name="repeat_input_password">Паролни қайта киритинг</string>
    <string name="please_input_all_fields_correct">Илтимос ҳамма майдонларни тўғри киритинг.</string>
    <string name="password_must_be_six_chars">Парол камидан 6 та белгидан ташкил топиши керак.</string>
    <string name="password_equal_to_repassword">Парол нотўғри қайта киритилган.</string>
    <string name="make_order">Буюртма бериш</string>
    <string name="order_infos">Буюртма маълумотлари</string>
    <string name="comment">Изоҳ</string>
    <string name="title_activity_maps">Map</string>
    <string name="total_">Умумий:</string>
    <string name="repeat">Такрорлаш</string>
    <string name="product_count_changed">Маҳсулот миқдори ўзгартирилди.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_">Сана:</string>
    <string name="order_">Буюртма #</string>
    <string name="store_">Савдо дўкони:</string>
    <string name="intro1">Савдо қилмоқчисиз лекин бизнинг савдо дўконларига боришга вақтингиз йўқми?</string>
    <string name="intro2">Унда ушбу илова айнан сиз учун! Киринг, ўзингизга ёққан маҳсулотларни танланг ва буюртма беринг. Барчаси бир иловада!</string>
    <string name="intro3">Ҳатто бизда тезкор етказиб бериш ҳам мавжуд!</string>
    <string name="intro4">Марҳамат хизматларимиздан фойдаланашингиз мумкин!</string>
    <string name="about_app">Илова ҳақида</string>
    <string name="download">ЮКЛАБ ОЛИШ</string>
    <string name="input_key">Калитни киритинг:</string>
    <string name="table">Cтол</string>
    <string name="products">Маҳсулотлар</string>
    <string name="saved_2_cart">Махсулот бекор килинди.</string>
    <string name="please_create_order_before">Илтимос олдин буюртма яратинг.</string>
    <string name="order_accept">Буюртма қабул қилинди!</string>
    <string name="you_have_unsended_products">Сизда жўнатилмаган маҳсулотлар мавжуд. Илтимос олдин жўнатиш тугмасини босинг.</string>
    <string name="unsended_">Жўнатилмаган:</string>
    <string name="pay_waiting">To\'lov kutilmoqda</string>
    <string name="completed_list">Tugatilganlar</string>
    <string name="cancel_list">Bekor qilinganlar</string>
    <string name="room_">Хона:</string>
    <string name="table_">Стол:</string>
    <string name="waiter_">Официант:</string>
    <string name="service_amount_">Ҳизмат ҳақи:</string>
    <string name="products_">Маҳсулотлар:</string>
    <string name="total_amount_">Умумий сумма:</string>
    <string name="name">Номи</string>
    <string name="amount">Ҳажми</string>
    <string name="summa">Суммаси</string>
    <string name="receive">Буюртмани Бекор қилиш </string>
    <string name="cash">Нақт</string>
    <string name="terminal">Терминал</string>
    <string name="complete">Тугатиш</string>
    <string name="make_cancel">Бекор қилиш</string>
    <string name="order_cancel">Савдодан олиб ташлаш</string>
    <string name="order_make">Савдога қўшиш</string>
    <string name="comlete_button">Тугатиш</string>
    <string name="do_you_really_complete_order">Siz rostdan ham buyurtmani tugatmoqchimisiz?</string>
    <string name="yes">Ha</string>
    <string name="no">Yo\'q</string>
    <string name="completed">Тугатилганлар</string>
    <string name="order">Махсулотлар</string>
    <string name="processing">Таюрланаёотганлар</string>
    <string name="sending">Янги буюртмалар</string>
    <string name="ilova_haqida">Илова хақида</string>
    <string name="login_in">Тизимга кириш</string>
    <string name="comleteding">Тугатилди</string>
    <string name="status">Қўшилди</string>
    <string name="order_date_">Буюртма вақти:</string>
    <string name="tayyorlash">Tayyorlash</string>
    <string name="tayyor">Tayyor</string>

</resources>